# FluentPython

./: README.md  main.py  pyproject.toml
chp01/: frenchdeck_tests.py  vector_tests.py
chp02/: arrayseq.py  match_lat_lon.py  metro_lat_lon.py
