[project]
name = "example-code-2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.19"
dependencies = [
    "curio>=1.6",
    "fastapi>=0.128.0",
    "geolib==1.0.7",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytypes>=1.0b10",
    "tqdm>=4.67.1",
]
